; ModuleID = '/home/carl/AnghaBench/mpv/video/out/hwdec/extr_hwdec_vaapi.c_check_fmt.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/hwdec/extr_hwdec_vaapi.c_check_fmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_hwdec_mapper = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.priv_owner* }
%struct.priv_owner = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ra_hwdec_mapper*, i32)* @check_fmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_fmt(%struct.ra_hwdec_mapper* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ra_hwdec_mapper*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.priv_owner*, align 8
  %7 = alloca i32, align 4
  store %struct.ra_hwdec_mapper* %0, %struct.ra_hwdec_mapper** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.ra_hwdec_mapper*, %struct.ra_hwdec_mapper** %4, align 8
  %9 = getelementptr inbounds %struct.ra_hwdec_mapper, %struct.ra_hwdec_mapper* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.priv_owner*, %struct.priv_owner** %11, align 8
  store %struct.priv_owner* %12, %struct.priv_owner** %6, align 8
  store i32 0, i32* %7, align 4
  br label %13

13:                                               ; preds = %41, %2
  %14 = load %struct.priv_owner*, %struct.priv_owner** %6, align 8
  %15 = getelementptr inbounds %struct.priv_owner, %struct.priv_owner* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %27

18:                                               ; preds = %13
  %19 = load %struct.priv_owner*, %struct.priv_owner** %6, align 8
  %20 = getelementptr inbounds %struct.priv_owner, %struct.priv_owner* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %7, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br label %27

27:                                               ; preds = %18, %13
  %28 = phi i1 [ false, %13 ], [ %26, %18 ]
  br i1 %28, label %29, label %44

29:                                               ; preds = %27
  %30 = load %struct.priv_owner*, %struct.priv_owner** %6, align 8
  %31 = getelementptr inbounds %struct.priv_owner, %struct.priv_owner* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = load i32, i32* %7, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %5, align 4
  %38 = icmp eq i32 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %29
  store i32 1, i32* %3, align 4
  br label %45

40:                                               ; preds = %29
  br label %41

41:                                               ; preds = %40
  %42 = load i32, i32* %7, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %7, align 4
  br label %13

44:                                               ; preds = %27
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %44, %39
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
